--- a/style.css
+++ b/style.css
@@ -45,8 +45,8 @@
 }
 
 .content{
-    height:100%;
-    width:35%;
+    max-height:100%;
+    width:350px;
    margin: 0 auto;
    background-color: rgba(130, 29, 197, 0.459);
   border-top:2px solid white;
@@ -54,6 +54,7 @@
   border-bottom-right-radius:60px;
   text-align: center;
   padding:5%;
+  margin-top: 50px;
 }
 
 .head{
@@ -73,7 +74,7 @@
     width:200;
     height:40px;
     font-size: 16px;
-    color:rgb(128, 128, 128);
+    color:rgb(122, 12, 211);
     border-radius: 5px;
     outline:none;
     margin-top:15px;
